# DockerWebServer

./: .gitignore  .gitmodules  BackgroundThread.py  CMakeLists.txt  Controller.py  DWS.py  DockerManager.py  Document.md  Documentation.md  GPUQueueManager.py  GPUServer.py  GPUServerConfig.yaml  GPUWaitQueue.py  Login.py  MailSender.py  NvidiaGPU.py  README.md  TimeManager.py  WebServer.py  WebServerConfig.yaml  config.py  config.yaml  create_app.py  database.py  gpuclient.cpp  requirements.txt  test.py  utils.py  webserver.cpp
blueprints/: Admin.py  Auth.py  Containers.py  Feature.py  Machines.py  User.py  __init__.py
client/: client.cpp  client.h  globalcommon.cpp  globalcommon.h  globaldata.cpp  globaldata.h  globalevent.cpp  globalevent.h
communication/: Admin.py  Auth.py  BaseMessenger.py  Containers.py  DockerController.py  GPUMessengerTCP.py  GPUMessengerWS.py  Machines.py  MailBox.py  NvidiaGPU.py  ServerManager.py  User.py  WebMassageWS.py  WebMessengerTCP.py  WebMessengerTCPAsync.py  WebMessengerWS.py  __init__.py  utils.py
configs/: Config.py  Extension.py  GPUServerConfig.yaml  WebServerConfig.yaml  __init__.py
data/database/: database.json  docker_images.json  gpu_request_database.json  user_info.json
data/image/conda:py38_492/: group  shadow  start.sh
data/image/pytorch:torch112_cu116/: passwd  shadow
data/user/DM16/DM16_a/: group  passwd  shadow  sudoers
data/user/DM18/DM18_a/: group  passwd  shadow  sudoers
data/user/DM19/DM19_a/: group  passwd  shadow  sudoers
data/user/DM2/DM2_a/: group
data/user/DM2/DM2_b/: shadow
data/user/DM2/DM2_c/: passwd  sudoers
data/user/DM20/DM20_a/: group  passwd  shadow  start.sh  sudoers
data/user/DMG02/DMG02_a/: group  passwd  shadow  sudoers
database/: BaseDB.py  Cache.py  DBTinyDB.py  DB_TinyDB.py  DataProcess.py  Logger.py  SQLitePool.py  SqlLiteDB.py  SqliteAlchemy.py  SqliteDB.py  TinyDB_.py  __init__.py
dispatch/: SchedulingStrategy.py  WaitQueue.py  __init__.py
docker/: __init__.py
dockerfile/: Dockerfile.base  Dockerfile.pytorch  Dockerfile.servermanager_conda  Dockerfile.servermanager_pytorch
dockerfile/src/: .zshrc  jupyter_notebook_config.py
eventhandlers/: WebHandlers.py
front/DockerFront/: package-lock.json  package.json
global/: globalconfig.cpp  globalconfig.h  globaldata.cpp  globaldata.h
server/: database.cpp  database.h  datastructure.hpp  globalcommon.cpp  globalcommon.h  globalconfig.cpp  globaldata.cpp  globaldata.h  globaldata.hpp  globalevent.cpp  globalevent.h  globalinit.cpp  globalinit.h  tcpserver.cpp  tcpserver.h  waitqueue.cpp  waitqueue.h  webserver.cpp  webserver.h
static/: autoload.js  login.html  login_live2d.html  userPageNew.css  userPageNew.html  userPageNew.js  userPageNewDark.css  user_page.html  食用指北.html  食用指北.md
templates/: login.html  user_page.html
tools/: dockerconnector.cpp  dockerconnector.h  dockercontroller.cpp  dockercontroller.h  globalconfig.cpp  globalconfig.h  globalconfig.hpp  gpuinfo.cpp  gpuinfo.h  logger.hpp  tools.hpp  worker.hpp
utils/: AsyncStructure.py
view/: Admin.py  Auth.py  Containers.py  Feature.py  Machines.py  View.py  __init__.py
webserver/: CMakeLists.txt  container.cpp  container.h  database.cpp  database.h  gpu.cpp  gpu.h  gpuwaitqueue.cpp  gpuwaitqueue.h  machine.cpp  machine.h  machinepool.cpp  machinepool.h  mailsender.cpp  mailsender.h  main.cpp  settings.ini  webserver.cpp  webserver.h
